--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,1 +1,12 @@
-{ "name": "Set Medic App", "dockerFile": "../Dockerfile", "appPort": ["5000:5000"], "extensions": [ "ms-python.python" ], "settings": { "python.pythonPath": "/usr/local/bin/python" } }
+{
+  "name": "Set Medic App",
+  "dockerFile": "./Dockerfile",
+  "appPort": ["5000:5000"],
+  "extensions": [
+    "ms-python.python",
+    "ms-azuretools.vscode-docker"
+  ],
+  "settings": {
+    "python.pythonPath": "/usr/local/bin/python"
+  }
+}
