--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.2.5
-Werkzeug==2.2.3
-Jinja2>=3.1.2
-itsdangerous>=2.1.2
-MarkupSafe>=2.1.1
+Flask==2.2.5  # Core framework
+Werkzeug==2.2.3  # WSGI utility library
+Jinja2>=3.1.2  # Templating engine
+itsdangerous>=2.1.2  # Security-related functions
+MarkupSafe>=2.1.1  # Safe string handling
+# Add any additional dependencies below
+# SQLAlchemy==1.4.27  # Example for database integration
