--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: set-medic-app
+    name: final-set-medic-app
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    buildCommand: ""
+    startCommand: gunicorn app:app
     plan: free
-    envVars:
-      - key: FLASK_ENV
-        value: production
+    region: oregon
+    branch: main
+    autoDeploy: true
