--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,11 @@
 services:
   - type: web
-    name: final-set-medic-app
-    env: python
-    buildCommand: ""
-    startCommand: gunicorn app:app
+    name: set-medic-app
+    env: docker
     plan: free
-    region: oregon
-    branch: main
-    autoDeploy: true
+    dockerfilePath: ./Dockerfile
+    envVars:
+      - key: FLASK_ENV
+        value: production
+      - key: FLASK_APP
+        value: app.py
