--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-DATABASE_URL=postgresql://quinton%40setmedicsa.com:Boomstomp%401@hostname:5432/dbname
+# Flask configuration
+FLASK_APP=app.py
+FLASK_ENV=development
+SECRET_KEY=your-secret-key
+
+# SQLite (default for local development)
+DATABASE_URL=sqlite:///setmedic.db
+
+# PostgreSQL (uncomment and configure for production)
+# DATABASE_URL=postgresql://username:password@hostname:5432/dbname
