--- a/project/.env
+++ b/project/.env
@@ -1,6 +1,6 @@
 # Flask configuration
 FLASK_APP=app.py
-FLASK_ENV=development
+FLASK_ENV=production
 SECRET_KEY=your-secret-key
 
 # SQLite (default for local development)
