--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Flask configuration
 FLASK_APP=app.py
 FLASK_ENV=production
-SECRET_KEY=your-secret-key
+SECRET_KEY=85aeb3e01747b3727eacbf80eac269b2
 
 # SQLite (default for local development)
-DATABASE_URL=sqlite:///setmedic.db
+DATABASE_URL=sqlite:///setmedicapp.db
 
 # PostgreSQL (uncomment and configure for production)
-# DATABASE_URL=postgresql://username:password@hostname:5432/dbname
+# DATABASE_URL=postgresql://username:password@hostname:5432/setmedicapp.db
