--- a/devcontainer.json
+++ b/devcontainer.json
@@ -8,5 +8,7 @@
   ],
   "settings": {
     "python.pythonPath": "/usr/local/bin/python"
+    "postCreateCommand": "pip install -r requirements.txt"
+    "workspaceFolder": "/workspace/setmedicapp"
   }
 }
