--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-Flask==2.2.5  # Core framework
-Werkzeug==2.2.3  # WSGI utility library
-Jinja2>=3.1.2  # Templating engine
-itsdangerous>=2.1.2  # Security-related functions
-MarkupSafe>=2.1.1  # Safe string handling
-gunicorn>=20.1.0  # Production WSGI server
-SQLAlchemy==1.4.27  # Database integration
-Flask-SQLAlchemy>=2.5.1
-psycopg2-binary>=2.9.6  # Only for PostgreSQL
+Flask==2.2.5
+Flask-SQLAlchemy==2.5.1
+gunicorn==20.1.0
