--- a/.env
+++ b/.env
@@ -8,3 +8,16 @@ DATABASE_URL=sqlite:///setmedicapp.db
 
 # PostgreSQL (uncomment and configure for production)
 # DATABASE_URL=postgresql://username:password@hostname:5432/setmedicapp.db
+
+# Flask secret key 
+SECRET_KEY=your-secret-key  
+
+# Stripe API keys STRIPE_SECRET_KEY=your-stripe-secret-key 
+STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key  
+
+# Email server configuration 
+MAIL_SERVER=smtp.example.com 
+MAIL_PORT=587 MAIL_USE_TLS=True 
+MAIL_USERNAME=your-email@example.com 
+MAIL_PASSWORD=your-email-password 
+MAIL_DEFAULT_SENDER=Set Medic App <your-email@example.com>
