--- a/devcontainer.json
+++ b/devcontainer.json
@@ -7,8 +7,8 @@
     "ms-azuretools.vscode-docker"
   ],
   "settings": {
-    "python.pythonPath": "/usr/local/bin/python"
-    "postCreateCommand": "pip install -r requirements.txt"
+    "python.pythonPath": "/usr/local/bin/python",
+    "postCreateCommand": "pip install -r requirements.txt",
     "workspaceFolder": "/workspace/setmedicapp"
   }
 }
