--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-gunicorn==20.1.0
-SQLAlchemy==1.4.41 
-Flask-SQLAlchemy==2.5.1 
+Flask>=2.0.0
+Flask-SQLAlchemy>=2.5
+Flask-Migrate>=3.0
+psycopg2-binary>=2.9
+gunicorn>=20.0.0
+python-dotenv>=0.21.0
 stripe==5.9.0
